fixed alignment issues

--- a/src/components/Greetings.css
+++ b/src/components/Greetings.css
@@ -2,13 +2,13 @@
   width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
 }
 .greet-main {
   width: 90%;
   padding: 20px 10px;
   margin: 0px auto;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 
 .greeting-main {
@@ -116,31 +116,28 @@
     width: auto;
   }
 }
-.ant-btn:hover, .ant-btn:focus {
-  color: #FE3D0C;
+.ant-btn:hover,
+.ant-btn:focus {
+  color: #fe3d0c;
   background: #fff;
-  border-color: #FE3D0C;
+  border-color: #fe3d0c;
 }
 .ant-btn-primary {
-  background: #EEF8F4;
-  border-color: #EEF8F4;
+  background: #eef8f4;
+  border-color: #eef8f4;
   color: #222;
   transition: 0.2s ease-in;
-
 }
-
-
-
 
 .icon-button i {
   color: white;
-    cursor: pointer;
-    margin: 0 5px;
-    text-align: center;
-    height: 32px;
-    padding: 4px 16px;
-    font-size: 14px;
-    border-radius: 32px;
+  cursor: pointer;
+  margin: 0 5px;
+  text-align: center;
+  height: 32px;
+  padding: 4px 16px;
+  font-size: 14px;
+  border-radius: 32px;
   transition: 0.2s ease-in;
   display: flex;
   align-items: center;
@@ -149,7 +146,7 @@
 .linkedin i {
   background-color: #0e76a8;
 }
-.linkedin i:hover{
-  color: #FE3D0C;
-  background-color: #EEF8F4;
+.linkedin i:hover {
+  color: #fe3d0c;
+  background-color: #eef8f4;
 }
